{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 30,
  "lineage": "4657ffab-e917-381d-f148-065be0b8d641",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948881762705:subnet/subnet-066f7f29aa8bda363",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-066f7f29aa8bda363",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "948881762705",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0585299ce6b523bff"
          },
          "dependencies": [
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948881762705:subnet/subnet-0b1350a0d5433a302",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0b1350a0d5433a302",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "948881762705",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0585299ce6b523bff"
          },
          "dependencies": [
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948881762705:vpc/vpc-0585299ce6b523bff",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_security_group_id": "sg-03e413486b6d768ce",
            "dhcp_options_id": "dopt-04ab0701bf3d230da",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0585299ce6b523bff",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "owner_id": "948881762705",
            "tags": {
              "Name": "default vpc 2"
            },
            "tags_all": {
              "Name": "default vpc 2"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948881762705:security-group/sg-00061f004a5599a3e",
            "description": "enable mysql/aurora access on port 3306",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00061f004a5599a3e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "mysql/aurora access",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04ed243195e4a0482"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "database security group 2",
            "name_prefix": "",
            "owner_id": "948881762705",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "database_security_group"
            },
            "tags_all": {
              "Name": "database_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0585299ce6b523bff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default_vpc",
            "aws_security_group.webserver_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948881762705:security-group/sg-04ed243195e4a0482",
            "description": "enable http access on port 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04ed243195e4a0482",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webserver security group 2",
            "name_prefix": "",
            "owner_id": "948881762705",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserver_security_group"
            },
            "tags_all": {
              "Name": "webserver_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0585299ce6b523bff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default_vpc"
          ]
        }
      ]
    }
  ]
}